code updated to save processing time in csv files and one script to measure cpu usage in real time

--- a/src/direct_lidar_odometry/cfg/params.yaml
+++ b/src/direct_lidar_odometry/cfg/params.yaml
@@ -10,6 +10,8 @@
 /**:
   ros__parameters:
 
+    dlo/odomNode/timing_log_path: "/home/david/ros2_ws/dlo_processing_times.csv"
+
     dlo/odomNode/initialPose/use: true   #false
 
     dlo/odomNode/initialPose/position/x: 0.0
